# sqlalchemy-nest

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  python-package.yml  test-publish.yml
examples/: README.md  requirements.txt
examples/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
sqlalchemy_nest/: __init__.py  orm.py
src/sqlalchemy_nest/: __init__.py  orm.py
test/: conftest.py  models.py  test_base_model.py  test_sqlalchemy_nest.py
tests/: conftest.py  models.py  test_base_model.py  test_sqlalchemy_nest.py
