[tool.poetry]
name = "sqlalchemy-nest"
version = "1.1.1"
description = "easy create nested models for sqlalchemy"
authors = ["satoru"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = ">=0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
addopts = "--cov=sqlalchemy_nest --cov-branch --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
