[tool.poetry]
name = "sqlalchemy-nest"
version = "1.2.0"
description = "easy create nested models for sqlalchemy"
authors = ["satoru"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{include = "sqlalchemy_nest", from = "src"}]
repository = "https://github.com/satorudev976/sqlalchemy-nest.git"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = ">=0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.1.14"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=sqlalchemy_nest --cov-branch --cov-report=term-missing --cov-report=html"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_errors = true
module = ["tests.*"]

[tool.ruff]
target-version = "py39"
exclude = ["tests"]
line-length = 127
select = [
    "C9",
    "E",
    "F",
    "W",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
