[metadata]
name = sqlalchemy-nest
version = 1.1.0
author = satoru
license = MIT
description = easy create nested models for sqlalchemy
url = https://github.com/satorudev976/sqlalchemy-nest.git
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    
[options]
packages = find:
install_requires = sqlalchemy>=0.7
python_requires = >=3.9

[options.extras_require]
test = pytest; pytest-cov; flake8

[flake8]
max-complexity=10
max-line-length=127
ignore = W293
exclude=test
